--- a/mechanic-shop-frontend/index.html
+++ b/mechanic-shop-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mechanic-shop-frontend</title>
+    <title>Mechanic Shop - Professional Auto Service</title>
   </head>
   <body>
     <div id="root"></div>
